fix:configuração na respose da interface swagger
